--- a/htmlpages/cssworkshops/bootstrap/luminarweb.html
+++ b/htmlpages/cssworkshops/bootstrap/luminarweb.html
@@ -77,19 +77,18 @@
       </div><br>
       <div class="container">
         <div class="row">
-          <div class="col-5">
+          <div class="col-3">
             <img src="data-science-1588143159.jpg" height="250px"></div>
-       
             
-          <div class="col-7" id="da">Data Science - ML - AI - Big Data with Cloud & Tableau
+          <div class="col-6" id="da"><h3>Data Science-ML-AI-Big Data with Cloud & Tableau</h3>
 
             Python, Hadoop, Spark, Data Analytics, Machine Learning, Deep Learning, Data Science, Artificial
             Intelligence, Tableau, AWS Cloud.
 
-            Course contents for Big Data - Data Science - Machine Learning - Deep Learning (AI)Training in Kochi,
-            Kerala.
+            <h4><b>Course contents for Big Data - Data Science - Machine Learning - Deep Learning (AI)Training in Kochi,
+            Kerala</b></h4>
 
-            Course Contents :
+            Course Contents :</div>
 
           </div>
         </div>
@@ -99,7 +98,7 @@
         <div class="row">
           <div class="col-4">
             <div class="card" style="width: 18rem;">
-              <img src="python-1588143191.jpg" class="card-img-top" alt="...">
+              <img src="python-1588143191.jpg" class="card-img-top" alt="..." height="200px">
               <div class="card-body">
                 <h5 class="card-title">Python Django - Full Stack Web Development Expert</h5>
                 <p class="card-text">core Python, Basics of Programming, Unix Commands, Advanced Python, Django
@@ -112,7 +111,7 @@
 
           <div class="col-4">
             <div class="card" style="width: 18rem;">
-              <img src="st-1588580359.jpg" class="card-img-top" alt="...">
+              <img src="st-1588580359.jpg" class="card-img-top" alt="..." height="200px">
               <div class="card-body">
                 <h5 class="card-title">Software Testing Specialist</h5>
                 <p class="card-text">Manual Testing, Java foundations, Mobile Testing, Selenium IDE, Selenium Web
@@ -123,7 +122,7 @@
           </div>
           <div class="col-4">
             <div class="card" style="width: 18rem;">
-              <img src="ms-1588143345.jpg" class="card-img-top" alt="...">
+              <img src="ms-1588143345.jpg" class="card-img-top" alt="..." height="200px">
               <div class="card-body">
                 <h5 class="card-title">MEAN Stack Web Development Expert - Angular & React</h5>
                 <p class="card-text">MongoDB, Express.JS, Angular, React.js and Node.js.</p>
@@ -133,7 +132,7 @@
           </div>
 
 
-<div><h1>hormese</h1></div>
+
 
 
 </body>
